# StackDesigner

./: README.md  main.py  pyproject.toml  states.py  test.py
agents/: .env.example  cost_analysis_agent.py  extracting_services_agent.py  planning_agent.py  recommendation_agent.py  requirement_agent.py  test.py
agents/outputs/cost_analysis_agent/: cost_analysis_detail.json  final_cost.json
agents/outputs/extracing_services_agent/: extracted_services.json
agents/outputs/planning_agent/: all_plans.json
agents/outputs/recommendation_agent/: recommendation.json
agents/outputs/requirement_agent/: run.json
agents/skills/coa/: SKILL.md
agents/skills/poa/: SKILL.md
agents/skills/requirements/: SKILL.md
agents/skills/saca/: SKILL.md
