[project]
name = "Stack-Designer"
version = "0.1.0"
description = "Get three independent infrastructure recommendations ranked by actual cost, instantly."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.12",
    "fastmcp>=3.4.4",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "mcp-toolbox>=0.1.7",
    "ollama>=0.6.2",
    "streamlit>=1.59.2",
]
